--- a/SchiffeVersenken.html
+++ b/SchiffeVersenken.html
@@ -20,8 +20,134 @@
     <img src="file:./icons/5-er Schiff.png"
     target="blank" width="5%" height="2%" alt="ich">
     <div class="SchiffeVersenken" aria-describedby="hint">
-        <p id="hint">Zum Spielen bitte abwechselnd in die Spielfelder klicken/tappen!</p>
+        <p id="hintH">Dein Spielfeld. bitte plaziere Deine Schiffe</p>
         <div id="gameboardHome"> 
+            <button id="0" disabled="disabled"></button>
+            <button id="1" disabled="disabled">A</button>
+            <button id="2" disabled="disabled">B</button>
+            <button id="3" disabled="disabled">C</button>
+            <button id="4" disabled="disabled">D</button>
+            <button id="5" disabled="disabled">E</button>
+            <button id="6" disabled="disabled">F</button>
+            <button id="7" disabled="disabled">G</button>
+            <button id="8" disabled="disabled">H</button>
+            <button id="9" disabled="disabled">I</button>
+            <button id="10" disabled="disabled">J</button>                      
+            <button id="11" disabled="disabled">1</button>
+            <button id="12" ></button>
+            <button id="13" ></button>
+            <button id="14" ></button>
+            <button id="15" ></button>
+            <button id="16" ></button>
+            <button id="17" ></button>
+            <button id="18" ></button>
+            <button id="19" ></button>
+            <button id="20" ></button>
+            <button id="21" ></button>
+            <button id="22" disabled="disabled">2</button>
+            <button id="23" ></button>
+            <button id="24" ></button>
+            <button id="25" ></button>
+            <button id="26" ></button>
+            <button id="27" ></button>
+            <button id="28" ></button>
+            <button id="29" ></button>
+            <button id="30" ></button>
+            <button id="31" ></button> 
+            <button id="32" ></button>           
+            <button disabled="disabled">3</button>
+            <button></button>
+            <button></button>
+            <button></button>
+            <button></button>
+            <button></button>
+            <button></button>
+            <button></button>
+            <button></button>
+            <button></button>
+            <button></button>
+            <button disabled="disabled">4</button>
+            <button></button>
+            <button></button>
+            <button></button>
+            <button></button>
+            <button></button>
+            <button></button>
+            <button></button>
+            <button></button>
+            <button></button>
+            <button></button>
+            <button disabled="disabled">5</button>
+            <button></button>
+            <button></button>
+            <button></button>
+            <button></button>
+            <button></button>
+            <button></button>
+            <button></button>
+            <button></button>
+            <button></button>
+            <button></button>
+            <button disabled="disabled">6</button>
+            <button></button>
+            <button></button>
+            <button></button>
+            <button></button>
+            <button></button>
+            <button></button>
+            <button></button>
+            <button></button>
+            <button></button>
+            <button></button>            
+            <button disabled="disabled">7</button>
+            <button></button>
+            <button></button>
+            <button></button>
+            <button></button>
+            <button></button>
+            <button></button>
+            <button></button>
+            <button></button>
+            <button></button>
+            <button></button>
+            <button disabled="disabled">8</button>
+            <button></button>
+            <button></button>
+            <button></button>
+            <button></button>
+            <button></button>
+            <button></button>
+            <button></button>
+            <button></button>
+            <button></button>
+            <button></button>
+            <button disabled="disabled">9</button>
+            <button></button>
+            <button></button>
+            <button></button>
+            <button></button>
+            <button></button>
+            <button></button>
+            <button></button>
+            <button></button>
+            <button></button>
+            <button></button>
+            <button disabled="disabled">10</button>
+            <button></button>
+            <button></button>
+            <button></button>
+            <button></button>
+            <button></button>
+            <button></button>
+            <button></button>
+            <button></button>
+            <button></button>
+            <button></button>
+        </div>
+        <br>
+        <br>
+        <p id="hintE">Computer Spielfeld. bitte plaziere hier Deine Schüsse</p>
+        <div id="gameboardEnemy"> 
             <button disabled="disabled"></button>
             <button disabled="disabled">A</button>
             <button disabled="disabled">B</button>
